--- a/src/content/VideoContent.pug
+++ b/src/content/VideoContent.pug
@@ -1,6 +1,7 @@
 script.
 	import Video from '../media/Video.pug'
 	export content = {}
+	export w = 640
 
 {#if content.type === 'video'}
-	Video(data={content.video})
+	Video(data={content.video} w={w})
