--- a/src/comment/Comments.pug
+++ b/src/comment/Comments.pug
@@ -1,24 +1,22 @@
 script.
 	import MoreComments from './MoreComments.pug'
 	import TopLevelComment from './TopLevelComment.pug'
-	export comments = []
-	export commentCount = NaN
+	export promise = null
 
-.comments.hide-scroll
-	{#each comments as comment}
-		TopLevelComment(comment={comment})
-		MoreComments(more={comment})
-.minimap
+{#await promise then comments}
+	.comments
+		{#each comments as comment}
+			TopLevelComment(comment={comment})
+			MoreComments(more={comment})
+	.minimap
 
 style.
 	.comments
-		height 100vh
-		overflow auto
 		display flex
 		flex-flow column nowrap
 		align-items flex-start
 		gap 4px
-		padding-right 80px
+		padding-right 20px
 	.minimap
 		position fixed
 		top 0
