--- a/src/content/EmbedContent.pug
+++ b/src/content/EmbedContent.pug
@@ -1,10 +1,6 @@
 script.
 	export content = {}
+	export w = 640
 
 {#if content.type === 'embed'}
-	iframe(src={content.src} allowfullscreen='true' allow={content.allow} title='Embed from {(new URL(content.src)).host}')
-
-style.
-	iframe
-		width 640px
-		height 360px
+	iframe(src={content.src} allowfullscreen='true' allow={content.allow} title='Embed from {(new URL(content.src)).host}' style='width: {w}px; height: {Math.round(w / 16 * 9)}px')
