--- a/src/media/Flair.pug
+++ b/src/media/Flair.pug
@@ -1,4 +1,5 @@
 script.
+	import Tag from './Tag.pug'
 	export flair = {}
 	export subredditName = ''
 	emojis = {}
@@ -17,15 +18,9 @@ script.
 					s
 			.join('')
 
-{#if flairHTML}
-	span {@html flairHTML}
+Tag(html={flairHTML} color={flair.color})
 
 style.
-	span
-		padding 0px 4px
-		height 16px
-		display flex
-		align-items flex-end
 	:global(.flair-emoji)
-		height 16px
-		width 16px
+		height 20px
+		width 20px
