--- a/src/comment/Comments.pug
+++ b/src/comment/Comments.pug
@@ -1,14 +1,17 @@
 script.
 	import MoreComments from './MoreComments.pug'
 	import TopLevelComment from './TopLevelComment.pug'
-	export promise = null
+	import CommentsStatistics from './CommentsStatistics.coffee'
+	export comments = []
+	export w = 640
+	minimapW = 160
+	statistics = new CommentsStatistics(comments)
 
-{#await promise then comments}
-	.comments
-		{#each comments as comment}
-			TopLevelComment(comment={comment})
-			MoreComments(more={comment})
-	.minimap
+.comments
+	{#each comments as comment}
+		TopLevelComment(comment={comment} statistics={statistics})
+		MoreComments(more={comment})
+.minimap
 
 style.
 	.comments
@@ -16,11 +19,12 @@ style.
 		flex-flow column nowrap
 		align-items flex-start
 		gap 4px
-		padding-right 20px
+		padding 64px 0
+		padding-left 64px
+		padding-right 160px
 	.minimap
 		position fixed
 		top 0
 		right 0
 		height 100%
-		width 20px
-		border-left 1px solid
+		width 80px
