--- a/src/comment/TopLevelComment.pug
+++ b/src/comment/TopLevelComment.pug
@@ -1,19 +1,17 @@
 script.
 	import Comment from './Comment.pug'
 	export comment = null
+	export statistics = null
 
 article.top-level-comment
 	span.score {comment.score}
-	Comment(comment={comment})
+	Comment(comment={comment} statistics={statistics})
 
 style.
 	.top-level-comment
 		position relative
-		margin-top 1em
-		margin-left 2em
-		background var(--white)
-		border-radius 1em
 	.score
+		display none
 		position absolute
 		top -0.5em
 		right calc(100% - 2ch)
