--- a/src/content/EmbedContent.pug
+++ b/src/content/EmbedContent.pug
@@ -3,4 +3,4 @@ script.
 	export w = 640
 
 {#if content.type === 'embed'}
-	iframe(src={content.src} allowfullscreen='true' allow={content.allow} title='Embed from {(new URL(content.src)).host}' style='width: {w}px; height: {Math.round(w / 16 * 9)}px')
+	iframe(src={content.src} allowfullscreen='true' allow={content.allow} title='Embed from {(new URL(content.src)).host}' style='width: {w}px; height: {w}px')
