--- a/src/comment/Comments.pug
+++ b/src/comment/Comments.pug
@@ -1,6 +1,6 @@
 script.
+	import Comment from './Comment.pug'
 	import MoreComments from './MoreComments.pug'
-	import TopLevelComment from './TopLevelComment.pug'
 	import CommentsStatistics from './CommentsStatistics.coffee'
 	export comments = []
 	export w = 640
@@ -9,7 +9,7 @@ script.
 
 .comments
 	{#each comments as comment}
-		TopLevelComment(comment={comment} statistics={statistics})
+		Comment(comment={comment} statistics={statistics})
 		MoreComments(more={comment})
 .minimap
 
@@ -18,9 +18,6 @@ style.
 		display flex
 		flex-flow column nowrap
 		align-items flex-start
-		gap 4px
-		padding 64px 0
-		padding-left 64px
 		padding-right 160px
 	.minimap
 		position fixed
