--- a/src/media/Video.pug
+++ b/src/media/Video.pug
@@ -18,7 +18,7 @@ script.
 		video.addEventListener 'playing', (e) ->
 			if audio.paused then audio.play()
 			
-video(bind:this={video} controls='true' style='width: {w}px; height: {w}px')
+video(bind:this={video} controls='true' style='width: {w}px; max-height: {Math.ceil(w / 3 * 4)}px')
 	{#each data.video as representation}
 		source(src={representation.href} type={representation.mime_type})
 audio(bind:this={audio})
