--- a/src/media/Flair.pug
+++ b/src/media/Flair.pug
@@ -1,25 +1,33 @@
 script.
-	import Tag from './Tag.pug'
 	export flair = {}
 	export subredditName = ''
+	export color = false
 	emojis = {}
-	flairHTML = flair.text
+	color = if color then flair.color else 'transparent'
+	html = flair.text
 	if LS['emojis@' + subredditName]
 		for emoji in LS['emojis@' + subredditName].split(',')
 			[code, id] = emoji.split(':')
 			emojis[code] = id
-		flairHTML =
+		html =
 			flair.text
 			.split(':')
 			.map (s) ->
 				if emojis[s]
-					"<img src='https://emoji.redditmedia.com/#{emojis[s]}/#{s}' class='flair-emoji' title=':#{s}:' alt=#{s}>"
+					"<img src='https://emoji.redditmedia.com/#{emojis[s]}/#{s}' class='flair-emoji' title=':#{s}:' alt=#{s} style='background: #{color}'>"
 				else
-					s
+					s.replaceAll('<', '&lt;')
 			.join('')
 
-Tag(html={flairHTML} color={flair.color})
+span {@html html}
 
 style.
+	span
+		display inline-flex
+		align-items center
+		font 400 14px/1.5 Karla
+		white-space pre
+		opacity 0.5
 	:global(.flair-emoji)
-		height 20px
+		height 16px
+		border-radius (@height / 2)
