internals: refactor wip

--- a/stylesheets/util.styl
+++ b/stylesheets/util.styl
@@ -1,10 +1,4 @@
-.scroll-tall
-	height 100%
-	overflow auto
-.no-scrollbar
-	scrollbar-width none
-	&::-webkit-scrollbar
-		display none
+// States
 .error
 	height 100%
 	width 100%
@@ -13,3 +7,12 @@
 	align-items center
 	background salmon
 	color white
+
+// Overflow
+.scroll-tall
+	height 100%
+	overflow auto
+.no-scrollbar
+	scrollbar-width none
+	&::-webkit-scrollbar
+		display none
