--- a/views/Post.pug
+++ b/views/Post.pug
@@ -1,8 +1,6 @@
 script.
-
-	import Flair from '../media/Flair.pug'
-	import Score from '../media/Score.pug'
-
+	import Flair from './Flair.pug'
+	import Score from './Score.pug'
 	export post = {}
 	export statistics = null
 	export selected = false
