--- a/views/Score.pug
+++ b/views/Score.pug
@@ -1,5 +1,5 @@
 script.
-	import { RedGrayColorScale, BlueGrayColorScale } from '../libraries/util/color.coffee'
+	import { RedGrayColorScale, BlueGrayColorScale } from '../functions/color/scales.coffee'
 	export score = NaN
 	export range = [0, 0]
 	export editDate = null
